<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_circle_white"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_planets_solarSystem"
            android:icon="@drawable/ic_circle_white"
            android:title="@string/menu_planets_solar_system" />

        <item
            android:id="@+id/nav_mks_online"
            android:icon="@drawable/ic_circle_white"
            android:title="@string/menu_mks_online" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_circle_white"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_circle_white"
            android:title="@string/about_us" />
    </group>
</menu>