<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_for_space"
    tools:context=".ui.planets_solarSystem.PlanetsSolarSystem">

    <ImageButton
        android:id="@+id/sun"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:background="@drawable/sun"
        android:contentDescription="@string/sun" />

    <ImageButton
        android:id="@+id/mercury"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="156dp"
        android:layout_marginTop="69dp"
        android:background="@drawable/mercury"
        android:contentDescription="@string/mercury"
        android:textAllCaps="false" />

    <ImageButton
        android:id="@+id/venus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/venus"
        android:contentDescription="@string/venus" />

    <ImageButton
        android:id="@+id/earth"
        android:layout_width="95dp"
        android:layout_height="89dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="179dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/earth"
        android:contentDescription="@string/earth" />

    <ImageButton
        android:id="@+id/mars"
        android:layout_width="115dp"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="174dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/mars"
        android:contentDescription="@string/mars" />

    <ImageButton
        android:id="@+id/jupiter"
        android:layout_width="141dp"
        android:layout_height="141dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="304dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/jupiter"
        android:contentDescription="@string/jupiter" />

    <ImageButton
        android:id="@+id/saturn"
        android:layout_width="90dp"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="325dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="71dp"
        android:background="@drawable/saturn"
        android:contentDescription="@string/saturn" />

    <ImageButton
        android:id="@+id/uranus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="29dp"
        android:background="@drawable/uranus"
        android:contentDescription="@string/uranus" />

    <ImageButton
        android:id="@+id/neptune"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/neptune"
        android:contentDescription="@string/neptune" />

</RelativeLayout>