<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="8dp"
    app:cardBackgroundColor="#65000000"
    app:cardElevation="5dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="5dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/line" />

            <ImageView
                android:layout_width="2dp"
                android:layout_height="50dp"
                android:layout_gravity="center|right"
                android:background="@color/white"
                tools:ignore="RtlHardcoded" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_url"
                android:layout_width="85dp"
                android:layout_height="75dp"
                android:layout_marginStart="1dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="88dp"
                android:layout_height="77dp"
                android:background="@drawable/border_menu_style"
                android:contentDescription="@string/image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </FrameLayout>

<!--        <ImageView-->
<!--            android:id="@+id/image_url"-->
<!--            android:layout_width="85dp"-->
<!--            android:layout_height="75dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:adjustViewBounds="true"-->
<!--            android:contentDescription="@string/image"-->
<!--            android:scaleType="centerCrop"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/frame_layout"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/news_site"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:hint="@string/name_site"
                android:maxLines="1"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:hint="@string/title"
                android:maxLines="3"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/published_at"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:ellipsize="end"
            android:hint="@string/published_at"
            android:maxLines="1"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>